fix: override mdui dialog-content overflow to prevent unwanted scrollbar

--- a/src/index.less
+++ b/src/index.less
@@ -476,6 +476,7 @@ img {
 
 .mdui-theme-layout-dark .mdui-dialog-content {
   color: #fff;
+  overflow-y: visible !important;
 }
 
 .mdui-panel-item-open {
